[project]
name = "time-series-forecasting-aapl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pmdarima>=2.0.4",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
]
